--- a/eye/package.json
+++ b/eye/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "@parcel/transformer-glsl": "2.8.1",
     "parcel": "^2.8.1"
+  },
+  "dependencies": {
+    "gl-matrix": "^3.4.3"
   }
 }
